fix: fixed two bugs. centering of modals, and z-index of search bar being higher than modal.

--- a/client/src/components/common/ConfirmationModal/Modal.module.css
+++ b/client/src/components/common/ConfirmationModal/Modal.module.css
@@ -2,9 +2,6 @@
     width: fit-content;
     max-width: 300px;
     background: var(--white);
-    position: fixed;
-    top: 50%;
-    left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 2px 2px 50vw 150vw rgba(0,0,0,0.3);
     padding: 1rem;
